--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,7 +28,8 @@ jdcal==1.4
 Jinja2==2.10
 Markdown==3.0.1
 MarkupSafe==1.1.0
-mysqlclient==1.3.14
+mysql-connector-python
+# mysqlclient==1.3.14
 odfpy==1.4.0
 openapi-codec==1.3.2
 openpyxl==2.5.12
