--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@smallwei/avue": "^1.6.2",
     "axios": "0.18.0",
     "clipboard": "1.7.1",
+    "cnpm": "^6.1.0",
     "codemirror": "5.39.2",
     "connect": "3.6.6",
     "d3": "^5.9.2",
